# fastapi-01

./: CLAUDE.md  README.md  celery_app.py  main.py  pyproject.toml  supabase-cheatsheet.md  tasks.py
docs/: celery_notes.md  fastapi_notes.md
