[project]
name = "fastapi-01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.4.0",
    "fastapi[standard]>=0.138.0",
    "flower>=2.0.0",
    "nanoid>=2.0.0",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.18",
    "supabase>=2.31.0",
]
